# Algo-Trader

./: .doxygen-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml
.github/workflows/: cpp-testing.yml  cpp.yml  doxygen.yml  python.yml
Source/Matlab/: TraderReset.m  workflow.m
cmake/: broker.cmake  gtest.cmake  internal_functions.cmake
comms/: CMakeLists.txt
comms/include/comms/: broker_request_msg.h  broker_request_update_msg.h  broker_response_msg.h  broker_response_update_msg.h  database_request_hyperparam_msg.h  database_request_layer_msg.h  database_request_msg.h  database_response_hyperparam_msg.h  database_response_layer_fc_msg.h  database_response_layer_msg.h  database_response_msg.h  database_response_network_msg.h  fc_layer_msg.h  layer_msg.h  msg_base.h
comms/src/: broker_request_update_msg.cpp  broker_response_update_msg.cpp  database_request_hyperparam_msg.cpp  database_request_layer_msg.cpp  database_response_hyperparam_msg.cpp  database_response_layer_fc_msg.cpp  database_response_layer_msg.cpp  database_response_network_msg.cpp  fc_layer_msg.cpp  layer_msg.cpp  msg_base.cpp  msg_base.h
comms/tests/: fc_layer_msg.cc  layer_msg.cc
gui/: CMakeLists.txt
gui/cmake/: qt.cmake
gui/include/gui/: dialog_network_create.h
gui/src/: dialog_interactivebroker.cpp  dialog_interactivebroker.ui  dialog_network_create.cpp  dialog_network_create.h  dialog_postgres.cpp  window_main.cpp  window_main.ui  window_main_connections.cpp  window_main_run.cpp
include/algo-trader/: trader_controller.h
interfaces/: CMakeLists.txt
interfaces/cmake/: broker.cmake
interfaces/include/interfaces/: broker_base.h  broker_controller.h  database_base.h  database_controller.h  interactive_broker.h  postgres.h
interfaces/samples/: interactive_broker.cpp
interfaces/src/: broker_controller.cpp  database_base.cpp  database_controller.cpp  ib_wrapper.cpp  ib_wrapper.h  interactive_broker.cpp  interactive_broker.h  postgres.cpp  postgres.h
interfaces/tests/: database_base.cc  interactive_broker.cc  mock_database_base.h  mock_ib_wrapper.h  mock_interfaces.h
neuralnetwork/: CMakeLists.txt
neuralnetwork/include/neuralnetwork/: activation.h  fully_connected_layer.h  layer_base.h  network_controller.h  neural_network.h
neuralnetwork/samples/: neural_network.cpp
neuralnetwork/src/: activation.cpp  fully_connected_layer.cpp  layer_base.cpp  network_controller.cpp  neural_network.cpp
neuralnetwork/tests/: activation.cc  fully_connected_layer.cc  layer_base.cc  mock_layer_base.h  neural_network.cc
services/: docker-compose.yml  readme.md
services/containers/documentation/: Dockerfile
services/pg/: .gitignore  create_db.pgsql  create_fun.pgsql  insert_sample_data.pgsql  tables.pgsql
src/: broker_base.h  broker_controller.cpp  data_server.cpp  data_server.h  database_base.h  database_controller.cpp  database_controller.h  ib_wrapper.cpp  interactive_broker.cpp  interactive_broker.h  main.cpp  network_controller.cpp  network_controller.h  postgres.cpp  postgres.h  trader_controller.cpp  trader_controller.h
tests/: interactive_broker.cc
tools/matlab/: LoadData.m  TraderStep.m  algoTrader.m  readme.md  runTest.m  workflow.m
tools/matlab/py/: python.m
tools/matlab/support/: LoadData.m  dataCollection.m  portfolio.m  traderReset.m  traderStep.m
tools/matlab/tests/: dataCollectionTest.m  portfolioTest.m
tools/python/: .coveragerc  .gitignore  .pylintrc  readme.md  requirements.txt  run_tests.py  train_trader.py
tools/python/modules/algo_trainer/: setup.py
tools/python/modules/algo_trainer/algo_trainer/: account.py
tools/python/modules/algo_trainer/algo_trainer/environments/: minute_trader.py
tools/python/modules/ticker/: setup.py
tools/python/modules/ticker/ticker/: interface.py  ticker.py
tools/python/src/: ticker.py
tools/python/tests/: test_account.py  test_minute_trader.py  test_ticker.py
trader/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  main.h  readme.md
trader/gui/: CMakeLists.txt  dialog_interactivebroker.cpp  dialog_interactivebroker.h  dialog_interactivebroker.ui  dialog_network_create.cpp  dialog_network_create.h  dialog_network_create.ui  dialog_postgres.cpp  dialog_postgres.h  dialog_postgres.ui  window_main.cpp  window_main.h  window_main.ui  window_main_connections.cpp  window_main_created.cpp  window_main_run.cpp
trader/interfaces/: CMakeLists.txt  broker_base.h  database_base.cpp  database_base.h  ib_connect.cpp  ib_connect.h  ib_wrapper.cpp  ib_wrapper.h  interactive_broker.cpp  interactive_broker.h  pg_connect.cpp  pg_connect.h  pg_layer.cpp  pg_layer.h  pg_network.cpp  pg_network.h  postgres.cpp  postgres.h  readme.md
trader/neuralnetwork/: CMakeLists.txt  activation.cpp  activation.h  fully_connected_layer.cpp  fully_connected_layer.h  layer_base.cpp  layer_base.h  neural_network.cpp  neural_network.h
trader/tests/: CMakeLists.txt  mock_interfaces.h  mock_matchers.h  mock_neuralnetwork.h  random.cpp  random.h  random_number.cpp  random_number.h  test_activation.cc  test_database_base.cc  test_fully_connected_layer.cc  test_ib_wrapper.cc  test_interactive_broker.cc  test_layer_base.cc  test_main.cpp  test_main.h  test_matrix.cc  test_matrix.cpp  test_neural_network.cc  test_pg_connect.cc  test_pg_layer.cc  test_pg_network.cc  test_stock.cc  test_trader.cc  test_utl_math.cc
trader/trader/: CMakeLists.txt  trader.cpp  trader.h
trader/util/: CMakeLists.txt  activation_types.h  broker_types.h  matrix.h  network_types.h  stock.cpp  stock.h  utl_math.cpp  utl_math.h
utilities/: CMakeLists.txt
utilities/include/utilities/: csv_reader.h  delimited_io.h  fifo_bidirectional.h  fifo_unidirectional.h  matrix.h  network_types.h  stock.h
utilities/samples/: csv_reader.cpp
utilities/src/: csv_reader.cpp  delimited_io.cpp  fifo_driver.h  matrix.cpp  random_number.cpp  stock.cpp  utl_math.cpp
utilities/tests/: fifo_driver.cc  matrix.cc  stock.cc  utl_math.cc
